<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">双蛇</string>

    <!--  BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">设备未连接</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">连接中……</string>
    <string name="title_connected_to">已连接设备: </string>
    <string name="title_not_connected">未连接设备</string>

    <!--  DeviceListActivity -->
    <string name="scanning">正在扫描设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有设备已配对</string>
    <string name="none_found">没有发现设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">搜索设备</string>

    <!-- Options Menu -->
    <string name="connect">连接设备</string>
    <string name="discoverable">发现设备</string>
    
    <!--layout  -->
    <string name="hagnlun_name">上轮转速</string>
    <string name="shanglunadd_name">增加</string>
    <string name="shanglunminus_name">减少</string>
    <string name="xialun_name">下轮转速</string>
    <string name="xialunadd_name">增加</string>
    <string name="xialunminus_name">减少</string>
    <string name="gongqiu_name">供球频率</string>
    <string name="gongqiuadd_name">增加</string>
    <string name="gongqiuminus_name">减少</string>
    <string name="xuanzhuan_name">机头旋转</string>
    <string name="xiangzuo_name">向左</string>
    <string name="xiangyou_name">向右</string>
    <string name="jitoutiaozheng_name">机头调整</string>
    <string name="xiangshang_name">向上</string>
    <string name="xiangxia_name">向下</string>
    <string name="start_button">启动</string>
    <string name="stop_button">停止</string>
    <string name="return_button">还原</string>
    <string name="edit_text_out">请输入指令</string>
  
    
    
    
    
    
    
    
    
    
</resources>
